Switched to using ProcessBuilder instead of exec for process launching to support remote apis later.  Added explicitexecution attribute to tool tag, to avoid unwanted automatic insertion of execution steps at certain points.